isInGap fix

--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ main {
     /*box-shadow: 0 0 0.5rem black;*/
 }
 
-.colors__container {
+.appearance__container {
     grid-area: 2 / 2 / 3 / 3;
 
     padding-top: 1rem;
@@ -234,7 +234,7 @@ main {
     align-items: center;
 }
 
-.colors__label {
+.appearance__label {
     font-weight: 400;
 }
 
@@ -271,7 +271,7 @@ footer p:first-of-type {
         flex-direction: column;
     }
 
-    .colors__container {
+    .appearance__container {
         width: 100%;
         height: fit-content;
 
